--- a/maquina-turing.ipynb
+++ b/maquina-turing.ipynb
@@ -31,7 +31,7 @@
     "M = (Q, \\Sigma, \\Gamma, \\delta, q_0, q_{\\text{accept}}, q_{\\text{reject}}) \n",
     "$$\n",
     "$$\n",
-    "Q: Un conjunto finito de estados.\n",
+    "Q: {\\text{Un conjunto finito de estados.}}\n",
     "$$\n",
     "$$\n",
     "\\Sigma: {\\text{El alfabeto de entrada, que es un conjunto finito de símbolos. Σ no incluye el símbolo especial de \"blanco\" }}\\sqcup.\n",
